# process_edit

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: 4744303328820754979.rar  README.txt  ScaleLabelDemo.sln
app/ScaleLabelDemo/: ScaleLabelDemo.qrc  ScaleLabelDemo.vcxproj  ScaleLabelDemo.vcxproj.filters
app/ScaleLabelDemo/Debug/ScaleLabelDemo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ScaleLabelDemo.lastbuildstate  ScaleLabelDemo.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog
app/ScaleLabelDemo/Debug/moc/: moc_MyLabel.cpp  moc_ScaleLabelDemo.cpp
app/ScaleLabelDemo/Debug/qmake/: qtvars_Win32_Debug.props
app/ScaleLabelDemo/Debug/rcc/: qrc_ScaleLabelDemo.cpp
app/ScaleLabelDemo/Release/qmake/: qtvars_Win32_Release.props
app/opencv_process_edit/: CMakeLists.txt  flexiv_wsb.cc  logger.cc  logger.h  main.cc
app/opencv_process_edit/gui/: CMakeLists.txt  chartsmode.cc  chartsmode.h  cmainwindow.cc  cmainwindow.h  custommode.cc  custommode.h  mainwindow.cc  mainwindow.h  menumode.cc  menumode.h  processeditmode.cc  processeditmode.h  scenermode.cc  scenermode.h
app/opencv_process_edit/gui/qcanpool/: fancyapplicationwidget.cpp  fancyapplicationwidget.h  fancybanner.cpp  fancybar.cpp  fancybar.h  fancybutton.cpp  fancybutton.h  fancycursor.h  fancydialog.cpp  fancydialog.h  fancymode.h  fancymodebar.cpp  fancymodebar.h  fancymodemanager.cpp  fancymodemanager.h  fancynavbar.cpp  fancynavbar.h  fancynavbutton.h  fancypopupwidget.cpp  fancypopupwidget.h  fancyquickaccessbar.cpp  fancyquickaccessbar.h  fancyribbon.cpp  fancyribbon.h  fancyribboncontainers.cpp  fancyribboncontainers.h  fancyribbongroup.cpp  fancyribbongroup.h  fancyribbonpage.cpp  fancyribbonpage.h  fancytab.h  fancytabbar.cpp  fancytabbar.h  fancytabwidget.cpp  fancytabwidget.h  fancytitlebar.cpp  fancytitlebar.h  fancywindow.cpp  fancywindow.h  minicentralarea.h  (+9 more)
include/: BaseNode.h  ParamWidget.h  Parameter.h
include/opencv/: OcvBaseNode.hpp  OcvBilateralFilterModel.hpp  OcvBlurModel.hpp  OcvCannyModel.h  OcvCvtColorModel.hpp  OcvData.hpp  OcvEqualizeHistModel.h  OcvFindContours.hpp  OcvGaussianBlurModel.hpp  OcvHoughLinesModel.h  OcvInpaintModel.hpp  OcvLoaderModel.hpp  OcvLogicModel.hpp  OcvMedianBlurModel.hpp  OcvMorphologyModel.hpp  OcvResizeModel.hpp  OcvShowModel.hpp  OcvSplitModel.h  OcvThresholdModel.hpp  PixmapData.hpp  RoiLabel.h
src/: BaseNode.cc  CustomWidgets.cc  ParamWidget.cc  Parameter.cc
src/opencv/: OcvBilateralFilterModel.cc  OcvBlurModel.cc  OcvCannyModel.cc  OcvCvtColorModel.cc  OcvEqualizeHistModel.cc  OcvFindContours.cc  OcvGaussianBlurModel.cc  OcvHoughLinesModel.cc  OcvInpaintModel.cc  OcvLoaderModel.cc  OcvLogicModel.cc  OcvMedianBlurModel.cc  OcvMorphologyModel.cc  OcvResizeModel.cc  OcvShowModel.cc  OcvSplitModel.cc  OcvThresholdModel.cc  RoiLabel.cc  process_edit.cc
test/: basenode_test.cc  opencv_test.cc
